--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     margin: 5px;
     border-radius: 4px;
     border: 1px solid white;
-}
+    }
 
 .introducao {
 
@@ -31,6 +31,11 @@ body {
     text-align: right;
     position: relative;
 
+}
+
+.introducao-cover img{
+    object-fit: cover;
+    height: 100%;
 }
 
 .intro {
@@ -85,6 +90,7 @@ header li:hover {
     display: grid;
     grid-template-columns: 1fr 1fr;
     max-width: 1000px;
+    /* word-break: break-all; */
     }
 
 .onda {
@@ -142,4 +148,42 @@ p, h1, h2, h3, ul {
 p {
     font-size: 1.25rem;
     line-height: 1.3;
+}
+
+@media (max-width: 1000px) {
+    .conteudo-vantagem {
+        grid-template-columns: 1fr;
+    }
+    .onda {
+        text-align: center;
+    }
+}
+
+@media (max-width: 650px) {
+    .conteudo {
+        grid-template-columns: 1fr;
+    }
+    h1::after{
+        display: none;
+    }
+    body {
+        gap: 30px;
+    }
+    .header {
+        gap: 30px;
+    }
+    .intro {
+        text-align: left;
+        justify-items: start;
+    }
+    .onda {
+        font-size: 3rem;
+    }
+
+}
+@media (max-width: 400px) {
+    .onda {
+        font-size: 2rem;
+    }
+
 }
